--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/weather
+spring.datasource.username=root
+spring.datasource.password=khong-77
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+openweathermap.key=53f872f5fc0287c285b6a929806cb86f
