feat: add logback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=khong-77
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 openweathermap.key=53f872f5fc0287c285b6a929806cb86f
+logging.config=classpath:logback-spring.xml
