--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 openweathermap.key=53f872f5fc0287c285b6a929806cb86f
 logging.config=classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
